--- a/about-me.html
+++ b/about-me.html
@@ -31,7 +31,14 @@
 
             header {
                 text-align: center;
+                width: 100%;
             }
+
+            .main {
+                width: 95%;
+            }
+
+            
 
         }
 
@@ -157,7 +164,7 @@
             text-decoration: none;
             text-transform: uppercase;
             color: #707070;
-            font-weight: 700;
+            font-weight: 500;
             padding: .2em;
 
 
@@ -277,7 +284,7 @@
             color: #707070;
         }
     </style>
-    <title>Home</title>
+    <title>About</title>
 </head>
 
 <body>
@@ -288,8 +295,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="about-me.html" class="current-page">about me</a></li>
-                <li><a href="recent-post.html">recent posts</a></li>
+                <li><a href="about-me.html" class="current-page">about</a></li>
+                <li><a href="recent-post.html">recent</a></li>
             </ul>
         </nav>
     </header>
