Changed link titles

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a  href="index.html" class="current-page">home</a></li>
-                <li><a href="about-me.html">about me</a></li>
-                <li><a href="recent-post.html">recent posts</a></li>
+                <li><a href="about-me.html">about</a></li>
+                <li><a href="recent-post.html">recent</a></li>
             </ul>
         </nav>
     </header>
@@ -103,7 +103,7 @@
 
     <footer>
         <p> <strong>Living the simple life</strong></p>
-        <p >Copyright 2019</p>
+        <p>Copyright 2019</p>
     </footer>
 </body>
 </html>
