--- a/recent-post.html
+++ b/recent-post.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Recent Posts</title>
+    <title>Recent</title>
 </head>
 
 <body>
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="about-me.html">about me</a></li>
-                <li><a href="recent-post.html" class="current-page">recent posts</a></li>
+                <li><a href="about-me.html">about</a></li>
+                <li><a href="recent-post.html" class="current-page">recent</a></li>
             </ul>
         </nav>
     </header>
